--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -960,3 +960,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.ActRule {
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    font-size: 12px;
+    background: #00000038;
+    color: white;
+    border-radius: 10px;
+    padding: 2px 8px;
+    line-height: 16px;
+}
