--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -226,3 +226,11 @@
     overflow: hidden;
     vertical-align: middle;
 }
+.infoDivNames {
+    background: #f6e1d9;
+    padding: 5px;
+    width: 100%;
+    max-height: 60px;
+    min-height: 35px;
+    overflow-y: auto;
+}
