--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -81,6 +81,12 @@
                     margin-top: 30px;
                     height: 35px;
                 }
+                .miniProgramBox{
+                    margin: auto;
+                    margin-top: 100px;
+                    display: block;
+                    width: 160px;
+                }
             }
 
         }
