--- a/src/containers/SaleActives/GrabRedPacket/components/ShareSetting/ShareSetting.less
+++ b/src/containers/SaleActives/GrabRedPacket/components/ShareSetting/ShareSetting.less
@@ -12,6 +12,81 @@
         margin-right: 8px;
     }
 }
+.msgTplWrapper{
+    margin-top: 10px;
+}
+.ModelWraper{
+    position: relative;
+    top: 50%;
+    margin-top: -220px;
+    :global{
+        .ant-modal-body{
+            height: 258px;
+            margin: 20px 0;
+        }
+        
+    }
+}
+.messageContentWrapper{
+    position: relative;
+}
+.messageContent{
+    padding: 12px;
+    border-radius: 4px;
+    border: 1px solid #E7E7E7;
+    margin-bottom: 10px;
+    color: #787878;
+    font-size: 12px;
+    cursor: pointer;
+    &:hover{
+        border-color: #1BB496;
+    }
+}
+.messageContent_Selected{
+    border-color: #1BB496;
+}
+.messageTpl{
+    border-radius: 4px;
+    border: 1px solid #E7E7E7;
+    margin-top: 10px;
+    :global{
+        .ant-card-head{
+            height: 32px;
+            line-height: 32px;
+            padding:0 10px;
+            background: #f8f8f8;
+        }
+        .ant-card-head-title{
+            font-size: 12px;
+            color: #999;
+        }
+        .ant-card-body{
+            padding: 0 12px;
+        }
+        .ant-card-extra{
+            top: 0;
+            right: 10px;
+            a{
+                color: #1AB495;
+            }
+            
+        }
+    }
+}
+.rightTopAction{
+    z-index: 1;
+    padding: 4px;
+    width: 20px;
+    height: 20px;
+    color: white;
+    border-radius: 3px;
+    border-color: #1ab394;
+    background-color: #1ab394;
+    text-align: center;
+    position: absolute;
+    right: 3px;
+    top: 3px;
+}
 .FormItemStyle{
     p{
         display: inline-block;
@@ -66,8 +141,9 @@
             }
         }
     }
-
+    
     :global{
+        
         .ant-calendar-picker{
             width: 100%
         }
@@ -163,4 +239,5 @@
     .PriceInputContent{
         width: 55px;
     }
+   
 }
