--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -547,7 +547,31 @@
         left: -9px;
     }
 }
+.iconTagsCol{
+    position: absolute;
+    width: 500px;
+    height: 22px;
+    left: 100px;
+    top: 28px;
+    .iconTags{
+        float: left;
+        height: 100%;
+        line-height: 22px;
+        margin-left: 30px;
+        overflow: hidden;
+        img{
+            height: 100%;
+            margin-right: 10px;
+            float: left;
+        }
+        div{
+            float: left;
+        }
+    }
 
+
+    
+}
 .logoGroupHeader {
     margin-left: 10px;
     margin-bottom: 10px;
