--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -18,6 +18,7 @@
         }
     }
 }
+
 .ShowActivityInfoMain{
     padding:15px 25px 15px 25px;
     width: 100%;
@@ -79,7 +80,11 @@
         display: inline-block;
         line-height: 32px;
     }
-
+    .activityCondition{
+        position: absolute;
+        top: 6px;
+        left: -60px;
+    }
     .inputLabel{
         display: inline-block;
         width: 30%;
@@ -2165,4 +2170,11 @@
             max-height: 200px;
         }
     }
+}
+.stepOneDisabled{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    cursor: not-allowed;
 }
