【前端】新活动--称重买赠

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1392,10 +1392,24 @@
    .leftBox {
         display: inline-block;
         width: 49%;
+        height: 54px;
+        padding: 6px 0px;
+        :global {
+            .ant-form-explain {
+                white-space: nowrap;
+            }
+        }
    } 
    .rightBox {
         display: inline-block;
         width: 49%;
+        height: 54px;
+        padding: 6px 0px;
+        :global {
+            .ant-form-explain {
+                white-space: nowrap;
+            }
+        }
    }
 }
 .expandFlexItem {
