--- a/src/containers/NewCreatePromotions/cardStyle.less
+++ b/src/containers/NewCreatePromotions/cardStyle.less
@@ -185,6 +185,17 @@
     border-radius: 2px;
     text-align: right;
 }
+.redValidDate{
+    position: relative;
+    top: 0;
+    left: 10px;
+    background: #ff5959;
+    color: #fff;
+    padding: 3px 5px;
+    font-style: normal;
+    z-index: 1;
+    border-radius: 2px;
+}
 .speTag {
     display: inline-block;
     position: relative;
