--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2231,7 +2231,7 @@
 }
 .stepOneDisabled{
     position: absolute;
-    height: 100%;
+    height: 450px;
     width: 100%;
     z-index: 100;
     cursor: not-allowed;
