券包、积分兑换、摇奖活动支持小程序分享设置【未完】

--- a/src/containers/SpecialPromotionNEW/shackGift/LotteryThirdStep.less
+++ b/src/containers/SpecialPromotionNEW/shackGift/LotteryThirdStep.less
@@ -1,3 +1,4 @@
+@green: #1AB495;
 .addLevelButton {
     background-color: #40B495;
     width: 114px;
@@ -46,6 +47,16 @@
             max-height: 310px;
             overflow: auto;
         }
+    }
+}
+.separate {
+    margin: 20px 0;
+    h3 {
+        font-size: 14px;
+        font-weight: bold;
+        margin: 15px 20px;
+        border-left: 3px solid @green;
+        text-indent: 10px;
     }
 }
 .tabPrize{
