称重买赠活动优化

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1391,7 +1391,7 @@
    }
    .leftBox {
         display: inline-block;
-        width: 49%;
+        width: 60%;
         height: 54px;
         padding: 6px 0px;
         :global {
@@ -1402,7 +1402,7 @@
    } 
    .rightBox {
         display: inline-block;
-        width: 49%;
+        width: 40%;
         height: 54px;
         padding: 6px 0px;
         :global {
@@ -2223,4 +2223,10 @@
             max-height: 200px;
         }
     }
+}
+
+.btnChooser {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
