--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -84,7 +84,7 @@
         border:1px solid rgba(26,179,149,1);
     }
     &:nth-child(odd) {
-        margin-right: 10px;
+        // margin-right: 10px;
     }
     .shareGroupHeader {
         display: flex;
@@ -92,23 +92,24 @@
         padding: 0 20px;
         height: 50px;
         background:rgba(248,248,248,1);
+        justify-content: space-between;
         .shareGroupTitle {
-            width: 500px;
+            // width: 500px;
             font-size:14px;
             font-weight:bold;
             color:rgba(51,51,51,1);
             flex: none;
-            max-width: 15em;
+            max-width: 12em;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
         }
         .shareGroupTitleTip {
-            margin-left: 12px;
+            // margin-left: 12px;
             font-size:12px;
             color:#999999;
             flex: none;
-            max-width: 15em;
+            max-width: 12em;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
@@ -220,7 +221,8 @@
 }
 .titleDix {
     display: inline-block; 
-    width: 85%;
+    max-width: 10em;
+    // width: 60%;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
