Y - UI - 特色营销管理启用/禁用用开关展示

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2236,3 +2236,19 @@
     z-index: 100;
     cursor: not-allowed;
 }
+
+.switcher {
+    height: 14px;
+    width: 28px;
+    // line-height: 12px;
+}
+
+:global {
+    .ant-switch-small.ant-switch-checked .ant-switch-inner {
+        margin-left: 1px !important;
+    }
+    
+    .ant-switch .ant-switch-inner {
+        line-height: 14px !important;
+    }
+}
