Y - UI - 局部下全局样式

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2243,12 +2243,14 @@
     // line-height: 12px;
 }
 
-:global {
-    .ant-switch-small.ant-switch-checked .ant-switch-inner {
-        margin-left: 1px !important;
-    }
-    
-    .ant-switch .ant-switch-inner {
-        line-height: 14px !important;
+.switcherG {
+    :global {
+        .ant-switch-small.ant-switch-checked .ant-switch-inner {
+            margin-left: 1px !important;
+        }
+        
+        .ant-switch .ant-switch-inner {
+            line-height: 14px !important;
+        }
     }
 }
