Y -  特色营销管理table【UI】

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1858,7 +1858,7 @@
 
 .pageContentWrapper {
     background-color: #FFFFFF;
-    padding: 30px;
+    padding: 15px 30px 30px;
 }
 
 .tableClass {
@@ -2238,19 +2238,14 @@
 }
 
 .switcher {
-    height: 14px;
-    width: 28px;
+    height: 16px;
+    width: 36px;
     // line-height: 12px;
 }
 
-.switcherG {
-    :global {
-        .ant-switch-small.ant-switch-checked .ant-switch-inner {
-            margin-left: 1px !important;
-        }
-        
-        .ant-switch .ant-switch-inner {
-            line-height: 14px !important;
-        }
+.sepcialActivesTable {
+    .actionIconPostion {
+        position: relative;
+        top: -6px;
     }
 }
