Y - UI - 特色营销管理

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1853,7 +1853,11 @@
     background-color: #FFFFFF;
     line-height: 64px;
     height: 64px;
-    padding-left: 20px;
+    padding: 0 20px;
+    overflow: hidden;
+    .exportBtn {
+        float: right;
+    }
 }
 
 .pageContentWrapper {
@@ -1891,6 +1895,7 @@
 
 .customPrimaryButton {
     background-color: #FFFFFF;
+    margin-right: 10px;
     :global {
         .anticon {
             transition: none;
