Y - 门店视角基础营销ui

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1827,18 +1827,20 @@
     // border-radius: 7px;
 }
 .jumpToCreate{
-    width: 90px;
+    float: right;
+    // width: 120px;
     left: 15px;
-    color: #1ab495;
-    border-color: #1ab495;
+    // margin-top: 18px;
+    // color: #1ab495;
+    // border-color: #1ab495;
     border-radius: 5px;
     background-color: transparent;
-    &:hover{
-        background-color: #f2f2f2;
-        color: #1ab495;
-        border-color: #1ab495;
+    // &:hover{
+        // background-color: #f2f2f2;
+        // color: #1ab495;
+        // border-color: #1ab495;
 
-    }
+    // }
 }
 
 
@@ -1853,7 +1855,7 @@
     background-color: #FFFFFF;
     line-height: 64px;
     height: 64px;
-    padding-left: 20px;
+    padding: 0 20px;
 }
 
 .pageContentWrapper {
