Y - 礼品信息右上角按钮问题优化

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1827,6 +1827,35 @@
     // border-radius: 7px;
 }
 .jumpToCreate{
+    width: 90px;
+    left: 15px;
+    color: #1ab495;
+    border-color: #1ab495;
+    border-radius: 5px;
+    background-color: transparent;
+    &:hover{
+        background-color: #f2f2f2;
+        color: #1ab495;
+        border-color: #1ab495;
+
+    }
+}
+.jumpToCreateInfo{
+    width: 90px;
+    left: 15px;
+    // color: #1ab495;
+    // border-color: #1ab495;
+    border-radius: 5px;
+    background-color: transparent;
+    // &:hover{
+        // background-color: #f2f2f2;
+        // color: #1ab495;
+        // border-color: #1ab495;
+
+    // }
+}
+
+.jumpToCreateNew{
     float: right;
     // width: 120px;
     left: 15px;
