Y - 礼品信息按钮位置

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1843,16 +1843,16 @@
 .jumpToCreateInfo{
     width: 90px;
     left: 15px;
-    // color: #1ab495;
-    // border-color: #1ab495;
+    color: #1ab495;
+    border-color: #1ab495;
     border-radius: 5px;
     background-color: transparent;
-    // &:hover{
-        // background-color: #f2f2f2;
-        // color: #1ab495;
-        // border-color: #1ab495;
+    &:hover{
+        background-color: #f2f2f2;
+        color: #1ab495;
+        border-color: #1ab495;
 
-    // }
+    }
 }
 
 .jumpToCreateNew{
