Y - 礼品信息右上角按钮问题优化

--- a/src/containers/GiftNew/GiftInfo/GiftInfo.less
+++ b/src/containers/GiftNew/GiftInfo/GiftInfo.less
@@ -408,10 +408,10 @@
     }
 }
 .jumpToCreateInfo{
-    width: 90px;
+    // width: 90px;
     left: 15px;
-    color: #1ab495;
-    border-color: #1ab495;
+    // color: #1ab495;
+    // border-color: #1ab495;
     border-radius: 5px;
     background-color: transparent;
     position: relative;
@@ -421,15 +421,15 @@
         border-color: #1ab495;
 
     }
-    &::after{
-        content: '';
-        position: absolute;
-        top: -18px;
-        right: -11px;
-        background: url(http://res.hualala.com/basicdoc/b58ae139-73cf-4e60-bc79-1c216fbe1cd2.png);
-        width: 32px;
-        height: 23px;
-    }
+    // &::after{
+    //     content: '';
+    //     position: absolute;
+    //     top: -18px;
+    //     right: -11px;
+    //     background: url(http://res.hualala.com/basicdoc/b58ae139-73cf-4e60-bc79-1c216fbe1cd2.png);
+    //     width: 32px;
+    //     height: 23px;
+    // }
 }
 .trclz{
     background-color: #cbd6cc!important;
