--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1841,10 +1841,10 @@
     }
 }
 .jumpToCreateInfo{
-    width: 90px;
+    // width: 90px;
     left: 15px;
-    color: #1ab495;
-    border-color: #1ab495;
+    // color: #1ab495;
+    // border-color: #1ab495;
     border-radius: 5px;
     background-color: transparent;
     &:hover{
