--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -1209,3 +1209,9 @@
     top: 73px;
     text-align: left;
 }
+.iconCheck {
+    position: absolute;
+    left: 67px;
+    top: 95px;
+    font-size: 8px;
+}
