礼品设置中增加小程序消息推送

--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -929,9 +929,23 @@
 }
 .leftPart {
     display: inline-block;
-    width: 22%;
+    width: 28%;
 }
 .rightPart {
     display: inline-block;
-    width: 78%;
+    width: 72%;
+    .selectMiniProgram{
+        :global{
+            .ant-select-selection{
+                border-color:#d9d9d9
+            }
+        }   
+    }
+    .selectMsg{
+        :global{
+            .ant-select-selection{
+                border-color:#d9d9d9
+            }
+        }   
+    }
 }
