“消费返积分”活动新增赠送卡值

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -57,7 +57,11 @@
             color: @link-hover ;
         }
     }
-
+    .checkLabel{
+        display: block;
+        margin-top: 15px;
+        margin-left: 88px;
+    }
 
 
 }
