--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -934,13 +934,13 @@
 .rightPart {
     display: inline-block;
     width: 72%;
-    .selectMiniProgram{
-        :global{
-            .ant-select-selection{
-                border-color:#d9d9d9
-            }
-        }   
-    }
+    // .selectMiniProgram{
+    //     :global{
+    //         .ant-select-selection{
+    //             border-color:#d9d9d9
+    //         }
+    //     }   
+    // }
     .selectMsg{
         :global{
             .ant-select-selection{
