“券包”发放类型增加固定+周期发放礼品

--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -13,6 +13,11 @@
     float: left;
     width: 660px;
 }
+.cGiftInfo1{
+    margin-top: 15px;
+    float: left;
+    width: 660px;
+}
 .horzontalBg{
     // background: @horzontal-bg-color;
     // height: 15px;
