--- a/src/containers/GiftNew/GiftInfo/TicketBag/index.less
+++ b/src/containers/GiftNew/GiftInfo/TicketBag/index.less
@@ -121,6 +121,15 @@
                     width: 20px;
                 }
             }
+            label[for=couponPackageGift]{
+                &::before{
+                    display: none;
+                }
+            }
+            label[for=couponPackageFirstGift],label[for=couponPackageFollowGift]{
+                top: -12px;
+                left: 68px;
+            }
         }
         .ant-alert-error{
             color: @red;
@@ -234,5 +243,20 @@
                 display: none;
             }
         }
+    }
+}
+.gTitle{
+    line-height: 30px;
+    display: block;
+}
+.fakeRequired {
+    &::before{
+        display: inline-block;
+        margin-right: 4px;
+        content: "*";
+        font-family: SimSun;
+        line-height: 1;
+        font-size: 12px;
+        color: #f04134;
     }
 }
