--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -774,7 +774,7 @@
     top: 100px;
 }
 
-.freeGiftSuccessModalCon {
+.freeGiftSuccessModalCon,.blindGiftSuccessModalCon {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -793,6 +793,15 @@
     color: rgba(153, 153, 153, 1);
     margin-bottom: 20px;
     max-width: 90%;
+}
+.successBgColor{
+    width: 80%;
+    margin-bottom: 20px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 20px;
+    color: #fff;
 }
 
 // 
@@ -840,7 +849,35 @@
         }
     }
 }
-
+.blindGiftSuccessModal {
+    position: absolute;
+    left: 92px;
+    top: 120px;
+    width: 287px;
+    height: 550px;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    border-radius: 0 0 28px 28px;
+    .blindGiftSuccessTip{
+        font-size: 12px;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 12px;
+        max-width: 90%;
+    }
+    .blindGiftSuccessModalCon{
+        padding-top: 15px;
+        padding-bottom: 10px;
+    }
+    .blindSuccessBtnColor{
+        width: 80%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        border-radius: 20px;
+        color: #fff;
+    }
+}
 .blindTit {
     width: 100%;
     text-align: center;
