装修页默认颜色更改

--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -391,6 +391,11 @@
     height: 30px;
     border: 1px solid rgba(229, 229, 229, 1);
     border-radius: 3px;
+    :global{
+        .rc-color-picker-trigger{
+            border:1px solid #f4f4f4;
+        }
+    }
 }
 
 .colorRow {
