称重买赠支持消费金额满赠

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2746,3 +2746,17 @@
     position: relative;
     line-height: 30px;
 }
+
+.measurmentSelect {
+    :global {
+        .ant-select-lg .ant-select-selection--single {
+            height: 28px;
+            width: 45px;
+            left: -2px;
+            border-radius: 0px 3px 3px 0px;
+        }
+        .ant-select-dropdown {
+            width: 46px!important;
+        }
+    }
+}
