--- a/src/containers/GiftNew/GiftAdd/GiftAdd.less
+++ b/src/containers/GiftNew/GiftAdd/GiftAdd.less
@@ -128,3 +128,41 @@
         }
     }
 }
+.selectBrandsWrapper{
+    margin-left: -100px;
+}
+.selectFoodsWrapper{
+    width: 440px;
+    // height: 390px;
+    background: #F7F7F7;
+    border-radius: 3px;
+    border: 1px solid #E7E7E7;
+    padding: 15px;
+    margin-left: 154px;
+
+    .foodWrapperHeader{
+        font-size: 14px;
+        font-family: MicrosoftYaHei;
+        color: #333333;
+        line-height: 14px;
+        margin-bottom: 15px;
+    }
+    :global{
+        .EditableTags_wrapper__1IHF_.EditableTags_empty__2gVSd{
+            width: 300px;
+            background-color: #fff;
+        }
+        .ant-form-item .ant-switch{
+            width: 48px;
+            border-radius: 12px;
+            height: 24px;
+            line-height: 24px;
+        }
+        .ant-switch:after{
+            border-radius: 50%;
+        }
+        .ant-switch .ant-switch-inner{
+            line-height: 24px;
+        }
+    }
+}
