--- a/src/containers/GiftNew/GiftAdd/GiftAdd.less
+++ b/src/containers/GiftNew/GiftAdd/GiftAdd.less
@@ -164,5 +164,11 @@
         .ant-switch .ant-switch-inner{
             line-height: 24px;
         }
+        .EditableTags_wrapper__1IHF_ .EditableTags_itemsWrapper__16Nxr{
+            background-color: #fff;
+        }
+        .ant-form-item > .ant-form-item, .ant-form-item :not(.ant-form) > .ant-form-item{
+            margin-bottom: 0;
+        }
     }
 }
