--- a/src/containers/GiftNew/GiftAdd/GiftAdd.less
+++ b/src/containers/GiftNew/GiftAdd/GiftAdd.less
@@ -132,6 +132,7 @@
     margin-left: -100px;
 }
 .selectFoodsWrapper{
+    position: relative;
     width: 440px;
     // height: 390px;
     background: #F7F7F7;
@@ -146,6 +147,15 @@
         color: #333333;
         line-height: 14px;
         margin-bottom: 15px;
+    }
+    .foodWrapperNotAllow{
+        position: absolute;
+        z-index: 9;
+        width: 100%;
+        height: 100%;
+        cursor: not-allowed;
+        top: 0;
+        left: 0;
     }
     :global{
         .EditableTags_wrapper__1IHF_.EditableTags_empty__2gVSd{
