添加菜品兑换券

--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -791,7 +791,14 @@
             width: 290px;
             left: 96px;
             height: 581px;
+            // .imgSelectChange{
+            //     margin-left: 48px;
+            //     margin-top: -70px;
+            // }
             img{
+                position: absolute;
+                top: 0;
+                left: 0;
                 width:100%
             }
         }
