新规则改版start

--- a/src/containers/ShareRules/oldStyle.less
+++ b/src/containers/ShareRules/oldStyle.less
@@ -11,10 +11,8 @@
     .titleArea {
         display: flex;
         align-items: center;
-        .subTitle{
-            font-size: 12px;
-            color: #999;
-            margin-left: 8px;
+        .title {
+            margin-right: 20px;
         }
         :global {
             .ant-alert {
@@ -23,11 +21,7 @@
         }
     }
 }
-.divideLine{
-    width: 100%;
-    height: 15px;
-    background:#F3F3F3
-}
+
 .headerActions {
     display: flex;
     align-items: center;
@@ -46,19 +40,6 @@
     position: relative;
     flex-wrap: wrap;
     padding: 20px;
-    border:1px solid red;
-    .columnsWrapper{
-        width: 340px;
-        height: 210px;
-        margin-right: 20px;
-        margin-bottom: 24px;
-        box-sizing: border-box;
-        padding:16px;
-        background: #FFFFFF;
-        box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.12);
-        border-radius: 8px;
-        
-    }
     .spinner {
         width: 100%;
         height: 100%;
@@ -246,7 +227,7 @@
 }
 .addRuleBtn {
     position: absolute;
-    right: 12px;
+    right: 130px;
 }
 .titleDix {
     display: inline-block; 
