新建共享规则

--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -38,7 +38,6 @@
         margin-right: 10px;
     }
 }
-
 .bodyContainer {
     overflow-y: auto;
     overflow-x: hidden;
@@ -46,8 +45,8 @@
     position: relative;
     flex-wrap: wrap;
     padding: 20px;
-    border:1px solid red;
     .columnsWrapper{
+        position: relative;
         width: 340px;
         height: 210px;
         margin-right: 20px;
@@ -57,7 +56,166 @@
         background: #FFFFFF;
         box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.12);
         border-radius: 8px;
-        
+        overflow: hidden;
+        .activityTitle{
+            overflow: hidden;
+        }
+        .titleText{
+            float: left;
+            max-width: 220px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            font-size: 18px;
+            font-family: PingFang-SC-Bold, PingFang-SC;
+            font-weight: bold;
+            color: #333333;
+            line-height: 18px;
+        }
+        .titleTag{
+            float: left;
+            width: 58px;
+            height: 18px;
+            margin-left: 5px;
+            line-height: 18px;
+            text-align: center;
+            background: #FDF0E9;
+            border-radius: 2px;
+            font-size: 12px;
+            font-family: PingFang-SC-Medium, PingFang-SC;
+            font-weight: 500;
+            color: #EF8648;
+        }
+        .teamShare{
+            background-color: #eaf6f6;
+            color: #1BB496;
+        }
+        .contMtd{
+            font-size: 14px;
+            font-weight: 600;
+            color: #666666;
+            line-height: 14px;
+        }
+        .contList{
+            margin-top: 5px;
+            overflow-y: auto;
+            max-height: 80px;
+            p{
+                margin-top: 10px;
+                font-size: 12px;
+                color: #999999;
+                line-height: 14px;
+                b{
+                    color:#595959;
+                    margin-left: 5px;
+                }
+            }
+        }
+        .activityCont{
+            margin-top: 16px;
+            width: 308px;
+            height: 115px;
+            padding: 12px;
+            background: #F9F9F9;
+            border-radius: 8px;
+            .contScrollBox{
+                height: 80px;
+                overflow: hidden;
+            }
+        }
+        .activityBothCont{
+            margin-top: 16px;
+            width: 308px;
+            .contBothBox{
+                position:relative;
+                float: left;
+                padding: 10px;
+                height: 115px;
+                overflow: hidden;
+                width: 148px;
+                margin-right: 12px;
+                background: #F9F9F9;
+                border-radius: 8px;
+                .contScrollBox{
+                    height: 82px;
+                    overflow: hidden;
+                }
+                .bothQuoteTag{
+                    position: absolute;
+                    right: -14px;
+                    top: 5px;
+                    font-size: 10px;
+                    width: 55px;
+                    height: 18px;
+                    color: #fff;
+                    background-color: #1AB495;
+                    text-align: center;
+                    line-height: 18px;
+                    transform:rotate(45deg);
+                }
+            }
+            .contMtd{
+                max-width: 120px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+            .contList{
+                p{
+                    span{
+                        display: inline-block;
+                        max-width: 100px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+                }
+            }
+            .contBothBox:last-child{
+                margin-right: 0;
+            }
+        }
+        .activityOperate{
+            position: absolute;
+            bottom: 16px;
+            right: 6px;
+            font-size: 12px;
+            color: #1BB496;
+            span{
+                float: left;
+                margin-right: 12px;
+                cursor: pointer;
+            }
+        }
+        .activityOrigin{
+            position: absolute;
+            bottom: 16px;
+            left: 16px;
+            font-size: 14px;
+            color: #666;
+            .tagImg{
+                margin-top: 2px;
+                width: 14px;
+                float: left;
+            }
+            span{
+                float: left;
+                margin-left: 6px;
+            }
+        }
+        .quoteTag{
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 46px;
+            height: 18px;
+            font-size: 12px;
+            color: #fff;
+            line-height: 18px;
+            background: #1BB496;
+            border-radius: 0px 8px 0px 8px;
+            text-align: center;
+        }
     }
     .spinner {
         width: 100%;
@@ -94,178 +252,4 @@
         color:rgba(153,153,153,1);
         margin-top: 10px;
     }
-}
-
-
-.shareGroupWrapper {
-    flex: none;
-    min-width: 100px;
-    height:262px;
-    background:rgba(255,255,255,1);
-    border:1px solid rgba(233,233,233,1);
-    margin-bottom: 15px;
-    border-radius:5px;
-    overflow: hidden;
-    &:hover {
-        border:1px solid rgba(26,179,149,1);
-    }
-    &:nth-child(odd) {
-        // margin-right: 10px;
-    }
-    .shareGroupHeader {
-        display: flex;
-        align-items: center;
-        padding: 0 20px;
-        height: 50px;
-        background:rgba(248,248,248,1);
-        justify-content: space-between;
-        .shareGroupTitle {
-            // width: 500px;
-            font-size:14px;
-            font-weight:bold;
-            color:rgba(51,51,51,1);
-            flex: none;
-            max-width: 12em;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-        }
-        .shareGroupTitleTip {
-            // margin-left: 12px;
-            font-size:12px;
-            color:#999999;
-            flex: none;
-            max-width: 12em;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-        }
-    }
-    .shareGroupBody {
-        height: 216px;
-        overflow-y: auto;
-        .shareGroupItem {
-            margin: 0 15px;
-            height: 36px;
-            display: flex;
-            align-items: center;
-            background-color: #FFFFFF;
-            &:not(:last-child) {
-                border-bottom: 1px solid #E9E9E9;
-            }
-            &:nth-child(even) {
-                background-color: #FAFAFA;
-            }
-            &:last-child {
-                margin-bottom: 5px;
-            }
-            .typeTag {
-                flex: none;
-                width: 8em;
-                &>span {
-                    display: inline-block;
-                    text-align: center;
-                    border: 1px solid rgba(247,192,160,1);
-                    color: #EE7D3A;
-                    border-radius:3px;
-                    padding: 0 5px;
-                }
-            }
-            .itemAction {
-                width: 10%;
-                display: flex;
-                justify-content: center;
-            }
-            .itemTitle {
-                width: 80%;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
-        }
-    }
-}
-
-.flexSpacer {
-    flex: 1;
-}
-
-.toBeChoosedBlock {
-    width: 628px;
-    height: 96px;
-    background: #FFFFFF;
-    border-radius: 4px;
-    border: 1px solid #D9D9D9;
-    overflow-y: auto;
-}
-
-.chooseItemSpan {
-    height: 22px;
-    background: #F5F5F5;
-    border-radius: 4px;
-    display: inline-block;
-    margin:4px;
-    padding: 1px 8px;
-}
-
-.shareTitle {
-    font-size: 14px;
-    margin-bottom: 8px;
-}
-
-.closeIcon {
-    cursor: pointer;
-    margin-left: 3px;
-}
-.activityBlock {
-    display: inline-block;
-    margin-top: 16px;
-    :global{
-        .ant-radio-button-wrapper-checked:first-child {
-            border-color: @green;
-        }
-        .ant-radio-button-wrapper-checked{
-            border-color: @green;
-            color: @green;
-            box-shadow: -1px 0 0 0 @green;
-        }
-        .ant-radio-button-wrapper:hover, .ant-radio-button-wrapper-focused {
-            color: @green;
-        }
-    }
-}
-.addActSpan {
-    color: @green;
-    margin-top: 12px;
-    display: inline-block;
-    cursor: pointer; 
-}
-.editNameIcon {
-    cursor: pointer;
-    font-weight: 500;
-}
-.addRuleBtn {
-    position: absolute;
-    right: 12px;
-}
-.titleDix {
-    display: inline-block; 
-    max-width: 10em;
-    // width: 60%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    vertical-align: middle;
-}
-.disabledTitleDix {
-    .titleDix;
-    color: #999999;
-}
-.infoDivNames {
-    background: #f6e1d9;
-    padding: 5px;
-    width: 100%;
-    max-height: 60px;
-    min-height: 35px;
-    overflow-y: auto;
 }
