--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -1,43 +1,51 @@
 @green: #1AB495;
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size:22px;
-    font-weight:400;
-    color:rgba(102,102,102,1);
+    font-size: 22px;
+    font-weight: 400;
+    color: rgba(102, 102, 102, 1);
     height: 60px;
     padding: 0 20px;
+
     .titleArea {
         display: flex;
         align-items: center;
-        .subTitle{
+
+        .subTitle {
             font-size: 12px;
             color: #999;
             margin-left: 8px;
         }
+
         :global {
             .ant-alert {
-                margin-bottom: 0!important;
+                margin-bottom: 0 !important;
             }
         }
     }
 }
-.divideLine{
+
+.divideLine {
     width: 100%;
     height: 15px;
-    background:#F3F3F3
+    background: #F3F3F3
 }
+
 .headerActions {
     display: flex;
     align-items: center;
     height: 48px;
     margin: 0 20px;
-    border-top: 1px solid rgba(243,243,243,1);
+    border-top: 1px solid rgba(243, 243, 243, 1);
+
     .headerLabel {
         margin-right: 10px;
     }
 }
+
 .bodyContainer {
     overflow-y: auto;
     overflow-x: hidden;
@@ -45,22 +53,25 @@
     position: relative;
     flex-wrap: wrap;
     padding: 20px;
-    .columnsWrapper{
+
+    .columnsWrapper {
         position: relative;
         width: 340px;
         height: 210px;
         margin-right: 20px;
         margin-bottom: 24px;
         box-sizing: border-box;
-        padding:16px;
+        padding: 16px;
         background: #FFFFFF;
         box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.12);
         border-radius: 8px;
         overflow: hidden;
-        .activityTitle{
+
+        .activityTitle {
             overflow: hidden;
         }
-        .titleText{
+
+        .titleText {
             float: left;
             max-width: 220px;
             white-space: nowrap;
@@ -72,7 +83,8 @@
             color: #333333;
             line-height: 18px;
         }
-        .titleTag{
+
+        .titleTag {
             float: left;
             width: 58px;
             height: 18px;
@@ -86,48 +98,58 @@
             font-weight: 500;
             color: #EF8648;
         }
-        .teamShare{
+
+        .teamShare {
             background-color: #eaf6f6;
             color: #1BB496;
         }
-        .contMtd{
+
+        .contMtd {
             font-size: 14px;
             font-weight: 600;
             color: #666666;
             line-height: 14px;
         }
-        .contList{
+
+        .contList {
             margin-top: 5px;
-            overflow-y: auto;
+            overflow: hidden;
             max-height: 80px;
-            p{
+
+            p {
                 margin-top: 10px;
                 font-size: 12px;
                 color: #999999;
                 line-height: 14px;
-                b{
-                    color:#595959;
+
+                b {
+                    color: #595959;
                     margin-left: 5px;
                 }
             }
         }
-        .activityCont{
+
+        .activityCont {
             margin-top: 16px;
             width: 308px;
             height: 115px;
             padding: 12px;
             background: #F9F9F9;
             border-radius: 8px;
-            .contScrollBox{
+
+            .contScrollBox {
                 height: 80px;
                 overflow: hidden;
             }
         }
-        .activityBothCont{
+
+        .activityBothCont {
             margin-top: 16px;
             width: 308px;
-            .contBothBox{
-                position:relative;
+            overflow: hidden;
+
+            .contBothBox {
+                position: relative;
                 float: left;
                 padding: 10px;
                 height: 115px;
@@ -136,11 +158,18 @@
                 margin-right: 12px;
                 background: #F9F9F9;
                 border-radius: 8px;
-                .contScrollBox{
+
+                .contScrollBox {
                     height: 82px;
                     overflow: hidden;
+
+                    b {
+                        position: relative;
+                        top: -3px;
+                    }
                 }
-                .bothQuoteTag{
+
+                .bothQuoteTag {
                     position: absolute;
                     right: -14px;
                     top: 5px;
@@ -151,18 +180,20 @@
                     background-color: #1AB495;
                     text-align: center;
                     line-height: 18px;
-                    transform:rotate(45deg);
+                    transform: rotate(45deg);
                 }
             }
-            .contMtd{
+
+            .contMtd {
                 max-width: 120px;
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
             }
-            .contList{
-                p{
-                    span{
+
+            .contList {
+                p {
+                    span {
                         display: inline-block;
                         max-width: 100px;
                         white-space: nowrap;
@@ -171,39 +202,46 @@
                     }
                 }
             }
-            .contBothBox:last-child{
+
+            .contBothBox:last-child {
                 margin-right: 0;
             }
         }
-        .activityOperate{
+
+        .activityOperate {
             position: absolute;
             bottom: 16px;
             right: 6px;
             font-size: 12px;
             color: #1BB496;
-            span{
+
+            span {
                 float: left;
                 margin-right: 12px;
                 cursor: pointer;
             }
         }
-        .activityOrigin{
+
+        .activityOrigin {
             position: absolute;
             bottom: 16px;
             left: 16px;
             font-size: 14px;
             color: #666;
-            .tagImg{
+
+            .tagImg {
                 margin-top: 2px;
                 width: 14px;
                 float: left;
             }
-            span{
+
+            span {
                 float: left;
                 margin-left: 6px;
             }
         }
-        .quoteTag{
+
+        .quoteTag {
             position: absolute;
             top: 0;
             right: 0;
@@ -217,10 +255,11 @@
             text-align: center;
         }
     }
+
     .spinner {
         width: 100%;
         height: 100%;
-        background-color: rgba(255,255,255,0.5);
+        background-color: rgba(255, 255, 255, 0.5);
         text-align: center;
         position: absolute;
         z-index: 99;
@@ -240,44 +279,52 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+
     .primaryTip {
-        font-size:12px;
-        font-weight:bold;
-        color:rgba(69,69,69,1);
+        font-size: 12px;
+        font-weight: bold;
+        color: rgba(69, 69, 69, 1);
         margin-top: 30px;
     }
+
     .tip {
-        font-size:12px;
-        font-weight:400;
-        color:rgba(153,153,153,1);
+        font-size: 12px;
+        font-weight: 400;
+        color: rgba(153, 153, 153, 1);
         margin-top: 10px;
     }
 }
-.createModal{
-    :global{
-        .ant-modal-body{
-            overflow:hidden;
+
+.createModal {
+    :global {
+        .ant-modal-body {
+            overflow: hidden;
             max-height: 1000px;
         }
     }
-    .previewImgWrapper{
+
+    .previewImgWrapper {
         margin-top: 8px;
         font-size: 12px;
         font-family: MicrosoftYaHei;
         color: #AEAEAE;
         line-height: 20px;
-        span{
+
+        span {
             float: left;
         }
-        div{
+
+        div {
             float: left;
-            b{
+
+            b {
                 position: relative;
                 font-style: normal;
                 color: #1AB495;
                 cursor: pointer;
             }
-            img{
+
+            img {
                 position: absolute;
                 display: none;
                 top: 45px;
@@ -286,42 +333,50 @@
                 height: 283px;
                 z-index: 9;
             }
-            &:hover{
-                img{
+
+            &:hover {
+                img {
                     display: block;
                 }
             }
         }
     }
-    .activityGroup{
+
+    .activityGroup {
         width: 550px;
         height: 275px;
         background: #F9F9F9;
         border-radius: 8px;
         padding: 16px 10px;
-        b{
+
+        b {
             color: #666;
             font-size: 12px;
             font-weight: 400;
             font-style: normal;
         }
-        .radioLeft,.radioRight{
+
+        .radioLeft,
+        .radioRight {
             position: relative;
             top: -12px;
             color: #b6b6b6;
             margin-left: 22px;
         }
-        :global{
-            .ant-radio-wrapper{
+
+        :global {
+            .ant-radio-wrapper {
                 margin-right: 15px;
                 margin-bottom: 0;
             }
         }
-        .leftLabel{
+
+        .leftLabel {
             position: relative;
             left: -10px;
             color: rgba(0, 0, 0, 0.65);
-            i{
+
+            i {
                 position: relative;
                 font-style: normal;
                 color: #b6b6b6;
@@ -329,7 +384,8 @@
                 left: 10px;
             }
         }
-        .activityTagsWrapper{
+
+        .activityTagsWrapper {
             padding: 5px;
             width: 450px;
             height: 98px;
@@ -337,24 +393,114 @@
             border-radius: 4px;
             border: 1px solid #E7E7E7;
             overflow: hidden;
-            .activityTagsScroll{
+
+            .activityTagsScroll {
                 max-height: 90px;
                 overflow-y: auto;
             }
         }
-        .addActivityBtn{
+
+        .addActivityBtn {
             margin-top: 5px;
             color: #1db395;
             border: none;
             background: transparent;
         }
     }
-    .activityInnerGroup{
+
+    .activityInnerGroup {
         width: 630px;
         background-color: #fff;
         padding: 16px 0;
-        .activityTagsWrapper{
+
+        .activityTagsWrapper {
             width: 545px;
         }
     }
+
+    .detailsListLeft {
+        margin-bottom: 23px;
+        overflow: hidden;
+
+        b {
+            font-size: 12px;
+            color: #333333;
+            line-height: 16px;
+        }
+
+        span {
+            margin-left: 8px;
+            font-size: 12px;
+            font-weight: 400;
+            color: #666666;
+            line-height: 17px;
+        }
+
+        .tableWrapperLeft {
+            font-weight: bold;
+            float: left;
+            font-size: 12px;
+            color: #333333;
+            line-height: 16px;
+        }
+
+        .tableWrapperRight {
+            position: relative;
+            float: left;
+            margin-left: 8px;
+            width: 570px;
+            overflow: hidden;
+
+            :global {
+                .tableTitle {
+                    span {
+                        font-weight: bold;
+                        color: #333;
+                    }
+                }
+
+                .textCenter {
+                    text-align: center;
+                }
+
+                .ant-table-middle .ant-table-thead>tr>th:not(.ant-table-selection-column),
+                .ant-table-middle .ant-table-tbody>tr>td {
+                    padding: 6px 8px
+                }
+
+                .ant-table-tbody>tr>td,
+                .ant-table-thead>tr>th {
+                    line-height: 15px;
+                }
+            }
+
+            .detailActivityName {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                text-align: center;
+                font-weight: 600;
+                color: #333;
+                border: 1px solid #e9e9e9;
+                border-bottom: none;
+                background: #f7f7f7;
+            }
+
+            .detailIsLinkedTag {
+                position: absolute;
+                right: -18px;
+                top: -4px;
+                font-size: 10px;
+                width: 55px;
+                height: 28px;
+                color: #fff;
+                background-color: #1AB495;
+                text-align: center;
+                line-height: 38px;
+                transform: rotate(45deg);
+                z-index: 9;
+            }
+        }
+    }
+
 }
