--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -27,7 +27,15 @@
         }
     }
 }
-
+.noData{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 14px;
+    color: #666;
+}
 .divideLine {
     width: 100%;
     height: 15px;
@@ -53,9 +61,9 @@
     position: relative;
     flex-wrap: wrap;
     padding: 20px;
-
     .columnsWrapper {
         position: relative;
+        float: left;
         width: 340px;
         height: 210px;
         margin-right: 20px;
@@ -228,16 +236,15 @@
             left: 16px;
             font-size: 14px;
             color: #666;
-
             .tagImg {
                 margin-top: 2px;
                 width: 14px;
                 float: left;
             }
-
             span {
                 float: left;
                 margin-left: 6px;
+                margin-top: -1px;
             }
         }
 
@@ -343,12 +350,20 @@
     }
 
     .activityGroup {
+        position: relative;
         width: 550px;
         height: 275px;
         background: #F9F9F9;
         border-radius: 8px;
         padding: 16px 10px;
-
+        overflow: hidden;
+        .disabledBox{
+            position: absolute;
+            width: 530px;
+            height: 200px;
+            z-index: 9;
+            cursor: not-allowed;
+        }
         b {
             color: #666;
             font-size: 12px;
@@ -399,7 +414,17 @@
                 overflow-y: auto;
             }
         }
-
+        .emptyAddActivityBtn{
+            position: relative;
+            top: -100px;
+            left: 160px;
+            width: 200px;
+            height: 90px;
+            margin-top: 5px;
+            color: #1db395;
+            border: none;
+            background: transparent;
+        }
         .addActivityBtn {
             margin-top: 5px;
             color: #1db395;
