RFM调起营销活动-唤醒活动显示tip和回显R值

--- a/src/containers/SpecialPromotionNEW/common/addGifts.less
+++ b/src/containers/SpecialPromotionNEW/common/addGifts.less
@@ -59,16 +59,23 @@
     display: flex;
     justify-content: space-between;
 }
-.grayHeader {
+.grayTopBox {
+    padding-left: 12px;
     background:rgba(248,248,248,1);
     border-bottom: 1px solid rgba(217,217,217,1);
-    padding: 0 12px;
-    display: flex;
-    line-height: 40px;
     border: 1px solid rgba(217,217,217,1);
     border-bottom: none;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+}
+.grayHeader {
+    // background:rgba(248,248,248,1);
+    // border-bottom: 1px solid rgba(217,217,217,1);
+    padding: 0 12px;
+    display: flex;
+    line-height: 40px;
+    padding-left: 0;
+   
 }
 .emptyHeader {
     display: flex;
